// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > snapshot > should match snapshot IF bar is NOT shown 1`] = `
<transition-stub
  appear="false"
  css="true"
  enteractiveclass="cwa-duration-200 cwa-ease-out"
  enterfromclass="cwa-transform cwa-opacity-0 cwa-w-0"
  entertoclass="cwa-opacity-100"
  leaveactiveclass="cwa-duration-300 cwa-ease-in cwa-delay-200"
  leavefromclass="cwa-opacity-100"
  leavetoclass="cwa-transform cwa-opacity-0"
  persisted="true"
>
  <div
    class="cwa-w-full cwa-h-0.5"
    style="display: none;"
  >
    <div
      class="cwa-bg-green-500 cwa-h-0.5 cwa-transition-all cwa-duration-300"
      style="width: 0%;"
    />
  </div>
</transition-stub>
`;

exports[`ProgressBar > snapshot > should match snapshot IF bar is shown with specified percentage 1`] = `
<transition-stub
  appear="false"
  css="true"
  enteractiveclass="cwa-duration-200 cwa-ease-out"
  enterfromclass="cwa-transform cwa-opacity-0 cwa-w-0"
  entertoclass="cwa-opacity-100"
  leaveactiveclass="cwa-duration-300 cwa-ease-in cwa-delay-200"
  leavefromclass="cwa-opacity-100"
  leavetoclass="cwa-transform cwa-opacity-0"
  persisted="true"
>
  <div
    class="cwa-w-full cwa-h-0.5"
  >
    <div
      class="cwa-bg-green-500 cwa-h-0.5 cwa-transition-all cwa-duration-300"
      style="width: 75%;"
    />
  </div>
</transition-stub>
`;
